# laser-hockey

./: .gitignore  README.md  pyproject.toml  setup.py
client/: README.MD  conversion_advanced.json  remoteBasicOpponent.py  remoteControllerInterface.py  remoteRainbowAgent.py  remoteTD3Agent.py  remoteUcbAgent.py  replay.py
client/backend/: client.py  client_cmd.py  game.py  network_interface.py
common/: agent.py  algorithm.py  evaluation.py  flags.py  generate_plots.py  loading.py  logger.py  mlp.py  noise.py  noisy_linear.py  observation.py  opponent.py  prioritized_replay_buffer.py  replay_buffer.py  reward.py  segment_tree.py  utils.py
environment/: hockey_env.py
rainbow/: agent.py  algorithm.py  evaluate_against_basic.py  train.py  train_tournament.py
rainbow/actions/: conversion_basic.json  conversion_full.json
rainbow/configs/: agent_config_e1.json  agent_config_e10.json  agent_config_e11.json  agent_config_e2.json  agent_config_e3.json  agent_config_e4.json  agent_config_e5.json  agent_config_e9.json  agent_config_tournament.json  algorithm_config_e10.json  algorithm_config_e11.json  algorithm_config_e5.json  algorithm_config_e7.json  algorithm_config_e8.json  algorithm_config_e9.json  algorithm_config_tournament.json  buffer_config_e2.json  (+3 more)
report/: main.bib  main.tex  rainbow.tex  sac.tex  td3.tex
sac/: agent.py  algorithm.py  sac_agent_config.json  train.py
td3/: agent.py  agent_weights  algorithm.py  evaluation_against_basic.py  td3_agent_config.json  td3_algorithm_config.json  td3_buffer_config.json  td3_optimizer_config.json  train.py
